tests/ui/parser/using_double_asterisk.sol
using * for *; //~ ERROR: expected identifier
